--- a/ci/authn-k8s/secrets.yml
+++ b/ci/authn-k8s/secrets.yml
@@ -1,7 +1,7 @@
-GCLOUD_CLUSTER_NAME: !var ci/google-container-engine-testbed/gcloud-cluster-name
-GCLOUD_ZONE: !var ci/google-container-engine-testbed/gcloud-zone
-GCLOUD_PROJECT_NAME: !var ci/google-container-engine-testbed/gcloud-project-name
-GCLOUD_SERVICE_KEY: !var:file ci/google-container-engine-testbed/gcloud-service-key
+#GCLOUD_CLUSTER_NAME: !var ci/google-container-engine-testbed/gcloud-cluster-name
+#GCLOUD_ZONE: !var ci/google-container-engine-testbed/gcloud-zone
+#GCLOUD_PROJECT_NAME: !var ci/google-container-engine-testbed/gcloud-project-name
+#GCLOUD_SERVICE_KEY: !var:file ci/google-container-engine-testbed/gcloud-service-key
 
 openshift43:
   K8S_VERSION: '1.16'
@@ -10,4 +10,3 @@ openshift43:
   OPENSHIFT_USERNAME: !var ci/openshift/4.3/username
   OPENSHIFT_PASSWORD: !var ci/openshift/4.3/password
   OPENSHIFT_REGISTRY_URL: !var ci/openshift/4.3/registry-url
-  
