--- a/ci/authn-k8s/secrets.yml
+++ b/ci/authn-k8s/secrets.yml
@@ -10,3 +10,7 @@ openshift43:
   OPENSHIFT_USERNAME: !var ci/openshift/4.3/username
   OPENSHIFT_PASSWORD: !var ci/openshift/4.3/password
   OPENSHIFT_REGISTRY_URL: !var ci/openshift/4.3/registry-url
+#  OPENSHIFT_URL: !var dev/openshift/4.3/api-url
+#  OPENSHIFT_USERNAME: !var dev/openshift/4.3/username
+#  OPENSHIFT_PASSWORD: !var dev/openshift/4.3/password
+#  OPENSHIFT_REGISTRY_URL: !var dev/openshift/4.3/registry-url
